src/main/java/com/example/comma/global/error/exception/ConflictException.java
package com.example.comma.global.error.exception;


import com.example.comma.global.error.ErrorCode;

public class ConflictException extends BusinessException {
    public ConflictException() {
        super(ErrorCode.CONFLICT);
    }

    public ConflictException(ErrorCode errorCode) {
        super(errorCode);
    }
}